# StickerDownloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  install.sh  pyproject.toml  update.sh
app/: access.py  capacity.py  commands.py  converters.py  database.py  handlers.py  main.py  models.py  processes.py  settings.py  text.py  workspace.py
docs/superpowers/plans/: 2026-07-11-telegram-sticker-converter-implementation.md  2026-07-12-one-command-installer-implementation.md
docs/superpowers/specs/: 2026-07-11-telegram-sticker-converter-design.md  2026-07-12-authorized-help-and-sticker-feedback-design.md  2026-07-12-one-command-installer-design.md
tests/: conftest.py  test_access.py  test_audit_contracts.py  test_capacity.py  test_converters.py  test_docker_contract.py  test_document_delivery.py  test_handlers.py  test_install.sh  test_security_contracts.py  test_settings.py  test_smoke.py  test_subprocess_cleanup.py  test_text_chunks.py  test_update.sh  test_update_contract.py  test_video_transparency_contract.py  test_workspace_cleanup.py
